# qr_detector_pkg

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
config/: params.yaml
launch/: qr_detector.launch.py  qr_detector_logging.launch.py
qr_detector_pkg/: node_qr_detector.py  utils.py
resource/: qr_detector_pkg
