<?xml version="1.0"?>
<package format="3">
  <name>qr_detector_pkg</name>
  <version>0.1.0</version>
  <description>QR code detection node that subscribes to compressed images and publishes decoded text and annotated images.</description>

  <maintainer email="example@example.com">WRS Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-pyzbar</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
